[metadata]
name = pytorch-ood
version = attr: pytorch_ood.__version__
project_name = pytorch-ood
url = https://github.com/kkirchheim/pytorch-ood
description = PyTorch Out-of-Distribution Detection
author = Konstantin Kirchheim
contact = konstantin.kirchheim@ovgu.de
keywords = OOD, PyTorch, Out-of-Distribution Detection
license = Apache 2.0
license_file = LICENSE
description_file = README.md
classifiers =
    Programming Language :: Python :: 3

[options]
packages = pytorch_ood
install_requires =
    torch>=1.10.0
    torchvision>=0.11.1
    torchmetrics
    scipy>=1.7.3

[options.packages.find]
where = src

[isort]
line_length = 99
profile = black
filter_files = True


[flake8]
max_line_length = 99
show_source = True
format = pylint
ignore =
    F401  # Module imported but unused
    W504  # Line break occurred after a binary operator
    F841  # Local variable name is assigned to but never used
    F403  # from module import *
    E501  # Line too long
    E203  # Whitespace before : -> collides with black
    W503  # Like break before binary operator -> collied with black line wrapping
exclude =
    .git
    __pycache__
    venv
    doc


[tool:pytest]
python_files = tests/*
log_cli = True
markers =
    slow
addopts =
    --durations=0
    --strict-markers
    --doctest-modules
filterwarnings =
    ignore::DeprecationWarning
    ignore::UserWarning
