[metadata]
name = pytorch-ood
project_name = pytorch-ood
author = Konstantin Kirchheim
contact = konstantin.kirchheim@ovgu.de
keywords = OOD, PyTorch, Out-of-Distribution Detection
version = attr: pytorch_ood.__version__
url = https://github.com/kkirchheim/pytorch-ood
project_urls =
    Bug Tracker = https://github.com/kkirchheim/pytorch-ood/issues
    repository = https://github.com/kkirchheim/pytorch-ood
description = A Library for Out-of-Distribution Detection with PyTorch
long_description = file: README.rst
license = Apache 2.0
license_file = LICENSE
long_description_content_type = text/x-rst
description_file = README.rst
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
# packages = pytorch_ood
packages=find:
package_dir =
    =src
python_requires = >=3.8
install_requires =
    torch>=1.7.0
    torchvision>=0.12.0
    torchmetrics>=1.0.0
    scipy>=1.7.0
    numpy>=1.23.0

[options.packages.find]
where = src

[isort]
line_length = 99
profile = black
filter_files = True


[flake8]
max_line_length = 99
show_source = True
format = pylint
ignore =
    # Module imported but unused
    F401
    # Line break occurred after a binary operator
    W504
    # Local variable name is assigned to but never used
    F841
    # from module import *
    F403
    # Line too long
    E501  
    # Whitespace before : -> collides with black
    E203  
    # Like break before binary operator -> collides with black line wrapping
    W503  
exclude =
    .git
    __pycache__
    venv
    docs


[tool:pytest]
python_files = tests/*
log_cli = True
markers =
    slow
addopts =
    --durations=0
    --strict-markers
    --doctest-modules
filterwarnings =
    ignore::DeprecationWarning
    ignore::UserWarning
